<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_popular">

    <fragment
        android:id="@+id/navigation_popular"
        android:name="brown.jeff.cocktailapp.presentation.popular.PopularDrinksFragment"
        android:label="@string/popular"
        tools:layout="@layout/fragment_popular">
        <action
            android:id="@+id/popular_to_drinkclicked" app:destination="@id/drinkClickedFragment" />
        <argument
            android:name="id"
            app:argType="string" />
        <action
            android:id="@+id/popular_to_settings"
            app:destination="@id/settingsFragment" />

    </fragment>

    <fragment
        android:id="@+id/navigation_recent"
        android:name="brown.jeff.cocktailapp.presentation.search.SearchRecentDrinksFragment"
        android:label="@string/recent"
        tools:layout="@layout/fragment_search">
        <action android:id="@+id/recent_to_drinkclicked"
            app:destination="@id/drinkClickedFragment">

        </action>
        <argument
            android:name="id"
            app:argType="string" />
        <action android:id="@+id/recent_to_settings"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="brown.jeff.cocktailapp.presentation.favorite.FavoriteDrinksFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites">
        <action android:id="@+id/favorites_to_drinkclicked" app:destination="@id/drinkClickedFragment" />
        <argument
            android:name="id"
            app:argType="string" />
        <action android:id="@+id/favorites_to_settings"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/drinkClickedFragment"
        android:name="brown.jeff.cocktailapp.presentation.drinkclicked.DrinkClickedFragment"
        android:label="drink_clicked_fragment"
        tools:layout="@layout/drink_clicked_fragment">

        <action
            android:id="@+id/drinkclicked_to_drinkclicked" app:destination="@id/drinkClickedFragment" />
        <argument
            android:name="id"
            app:argType="string" />
        <action android:id="@+id/drinkclicked_to_settings"
            app:destination="@id/settingsFragment" />


    </fragment>

    <fragment
        android:id="@+id/navigation_random"
        android:name="brown.jeff.cocktailapp.presentation.random.RandomDrinkFragment"
        android:label="random_drink_fragment"
        tools:layout="@layout/drink_clicked_fragment">
        <action android:id="@+id/randomdrink_to_drinkclicked" app:destination="@id/drinkClickedFragment" />
        <action android:id="@+id/randomdrink_to_settings" app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="brown.jeff.cocktailapp.presentation.settings.SettingsFragment"
        android:label="settings_fragment" />
</navigation>
