<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/randomdrink_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/randomdrink_imageview"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginBottom="12dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/ingredientstitle_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/ingredient1_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingStart="36dp"
                android:paddingTop="12dp"
                android:paddingEnd="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp" />

            <View
                android:id="@+id/view_divider1"
                style="@style/Divider" />

            <TextView
                android:id="@+id/ingredient2_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingStart="36dp"
                android:paddingEnd="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp" />

            <View
                android:id="@+id/view_divider2"
                style="@style/Divider" />

            <TextView
                android:id="@+id/ingredient3_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingStart="36dp"
                android:paddingEnd="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp" />

            <View
                android:id="@+id/view_divider3"
                style="@style/Divider" />

            <TextView
                android:id="@+id/ingredient4_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingStart="36dp"
                android:paddingEnd="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp" />

            <View
                android:id="@+id/view_divider4"
                style="@style/Divider" />

            <TextView
                android:id="@+id/ingredient5_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingStart="36dp"
                android:paddingEnd="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp" />

            <View
                android:id="@+id/view_divider5"
                style="@style/Divider" />

            <TextView
                android:id="@+id/ingredient6_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingStart="36dp"
                android:paddingEnd="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp" />

            <View
                android:id="@+id/view_divider6"
                style="@style/Divider" />

            <TextView
                android:id="@+id/ingredient7_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingStart="36dp"
                android:paddingEnd="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp" />

            <View
                android:id="@+id/view_divider7"
                style="@style/Divider" />

            <TextView
                android:id="@+id/ingredient8_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingStart="36dp"
                android:paddingEnd="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp" />

            <View
                android:id="@+id/view_divider8"
                style="@style/Divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/ingredient9_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingStart="36dp"
                android:paddingEnd="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp" />

            <View
                android:id="@+id/view_divider9"
                style="@style/Divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/ingredient10_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingStart="36dp"
                android:paddingEnd="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp" />

            <View
                android:id="@+id/view_divider10"
                style="@style/Divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/ingredient11_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingStart="36dp"
                android:paddingEnd="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp" />

            <View
                android:id="@+id/view_divider11"
                style="@style/Divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/ingredient12_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingStart="36dp"
                android:paddingEnd="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp" />

            <View
                android:id="@+id/view_divider12"
                style="@style/Divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/ingredient13_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingStart="36dp"
                android:paddingEnd="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp" />

            <View
                android:id="@+id/view_divider13"
                style="@style/Divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/ingredient14_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingStart="36dp"
                android:paddingEnd="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp" />

            <View
                android:id="@+id/view_divider14"
                style="@style/Divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/ingredient15_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:paddingStart="36dp"
                android:paddingEnd="6dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp" />

            <View
                android:id="@+id/view_divider15"
                style="@style/Divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/shareingredients_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="12dp"
                android:text="@string/share_ingredients" />

            <View
                android:id="@+id/view_divider16"
                style="@style/Divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/instructionstitle_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/instructions_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="36dp"
                android:paddingEnd="36dp" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/randomdrink_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>